--- a/msvc/wswan/msvc-2003-xbox1/msvc-2003-xbox1.vcproj
+++ b/msvc/wswan/msvc-2003-xbox1/msvc-2003-xbox1.vcproj
@@ -35,7 +35,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/mednafen_wswan_libretro_xdk.lib"/>
+				OutputFile="$(OutDir)/msvc-2003-xbox1.lib"/>
 			<Tool
 				Name="VCPostBuildEventTool"/>
 			<Tool
@@ -70,7 +70,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/mednafen_wswan_libretro_xdk.lib"/>
+				OutputFile="$(OutDir)/msvc-2003-xbox1.lib"/>
 			<Tool
 				Name="VCPostBuildEventTool"/>
 			<Tool
@@ -106,7 +106,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/mednafen_wswan_libretro_xdk.lib"/>
+				OutputFile="$(OutDir)/msvc-2003-xbox1.lib"/>
 			<Tool
 				Name="VCPostBuildEventTool"/>
 			<Tool
@@ -141,7 +141,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/mednafen_wswan_libretro_xdk.lib"/>
+				OutputFile="$(OutDir)/msvc-2003-xbox1.lib"/>
 			<Tool
 				Name="VCPostBuildEventTool"/>
 			<Tool
@@ -177,7 +177,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLibrarianTool"
-				OutputFile="$(OutDir)/mednafen_wswan_libretro_xdk.lib"/>
+				OutputFile="$(OutDir)/msvc-2003-xbox1.lib"/>
 			<Tool
 				Name="VCPostBuildEventTool"/>
 			<Tool
