--- a/msvc/pce-fast/msvc-2010/msvc-2010.vcxproj
+++ b/msvc/pce-fast/msvc-2010/msvc-2010.vcxproj
@@ -22,10 +22,13 @@
     <ClCompile Include="..\..\..\mednafen\cdrom\galois.cpp" />
     <ClCompile Include="..\..\..\mednafen\cdrom\l-ec.cpp" />
     <ClCompile Include="..\..\..\mednafen\cdrom\lec.cpp" />
-    <ClCompile Include="..\..\..\mednafen\cdrom\pcecd.cpp" />
     <ClCompile Include="..\..\..\mednafen\cdrom\recover-raw.cpp" />
     <ClCompile Include="..\..\..\mednafen\cdrom\scsicd.cpp" />
     <ClCompile Include="..\..\..\mednafen\cdrom\SimpleFIFO.cpp" />
+    <ClCompile Include="..\..\..\mednafen\cputest\cputest.c">
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsC</CompileAs>
+      <CompileAs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">CompileAsC</CompileAs>
+    </ClCompile>
     <ClCompile Include="..\..\..\mednafen\endian.cpp" />
     <ClCompile Include="..\..\..\mednafen\error.cpp" />
     <ClCompile Include="..\..\..\mednafen\file.cpp" />
@@ -42,12 +45,15 @@
     <ClCompile Include="..\..\..\mednafen\MemoryStream.cpp" />
     <ClCompile Include="..\..\..\mednafen\mempatcher.cpp" />
     <ClCompile Include="..\..\..\mednafen\okiadpcm.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast\huc.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast\huc6280.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast\input.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast\pce.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast\tsushin.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast\vdc.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\hes.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\huc.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\huc6280.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\input.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\pce.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\pcecd.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\pcecd_drive.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\psg.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\vdc.cpp" />
     <ClCompile Include="..\..\..\mednafen\settings.cpp" />
     <ClCompile Include="..\..\..\mednafen\sound\Blip_Buffer.cpp" />
     <ClCompile Include="..\..\..\mednafen\sound\Stereo_Buffer.cpp" />
