--- a/msvc/pce-fast/msvc-2010/msvc-2010.vcxproj.filters
+++ b/msvc/pce-fast/msvc-2010/msvc-2010.vcxproj.filters
@@ -54,6 +54,9 @@
     <Filter Include="Source Files\mednafen\tremor">
       <UniqueIdentifier>{6e70f6f2-5174-46d4-9bd6-33725139e84c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\mednafen\cputest">
+      <UniqueIdentifier>{473bff84-df08-4518-a515-831989d95593}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\mednafen\Stream.cpp">
@@ -167,27 +170,6 @@
     <ClCompile Include="..\..\..\mednafen\hw_sound\pce_psg\pce_psg.cpp">
       <Filter>Source Files\mednafen\hw_sound\pce_psg</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\cdrom\pcecd.cpp">
-      <Filter>Source Files\mednafen\cdrom</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\pce_fast\vdc.cpp">
-      <Filter>Source Files\mednafen\pce_fast</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\pce_fast\huc6280.cpp">
-      <Filter>Source Files\mednafen\pce_fast</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\pce_fast\huc.cpp">
-      <Filter>Source Files\mednafen\pce_fast</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\pce_fast\input.cpp">
-      <Filter>Source Files\mednafen\pce_fast</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\pce_fast\pce.cpp">
-      <Filter>Source Files\mednafen\pce_fast</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\pce_fast\tsushin.cpp">
-      <Filter>Source Files\mednafen\pce_fast</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\mednafen\hw_video\huc6270\vdc_video.cpp">
       <Filter>Source Files\mednafen\hw_video\huc6270</Filter>
     </ClCompile>
@@ -247,6 +229,36 @@
     </ClCompile>
     <ClCompile Include="..\..\..\mednafen\tremor\vorbisfile.c">
       <Filter>Source Files\mednafen\tremor</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\hes.cpp">
+      <Filter>Source Files\mednafen\pce_fast</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\huc.cpp">
+      <Filter>Source Files\mednafen\pce_fast</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\huc6280.cpp">
+      <Filter>Source Files\mednafen\pce_fast</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\input.cpp">
+      <Filter>Source Files\mednafen\pce_fast</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\pce.cpp">
+      <Filter>Source Files\mednafen\pce_fast</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\pcecd.cpp">
+      <Filter>Source Files\mednafen\pce_fast</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\pcecd_drive.cpp">
+      <Filter>Source Files\mednafen\pce_fast</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\psg.cpp">
+      <Filter>Source Files\mednafen\pce_fast</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\vdc.cpp">
+      <Filter>Source Files\mednafen\pce_fast</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\cputest\cputest.c">
+      <Filter>Source Files\mednafen\cputest</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
