--- a/msvc/pce-fast/msvc-2010/msvc-2010.vcxproj.filters
+++ b/msvc/pce-fast/msvc-2010/msvc-2010.vcxproj.filters
@@ -260,5 +260,8 @@
     <ClCompile Include="..\..\..\mednafen\cputest\cputest.c">
       <Filter>Source Files\mednafen\cputest</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\player.cpp">
+      <Filter>Source Files\mednafen</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
