--- a/msvc/ngp/msvc-2010-360/msvc-2010-360.vcxproj.filters
+++ b/msvc/ngp/msvc-2010-360/msvc-2010-360.vcxproj.filters
@@ -33,6 +33,9 @@
     <Filter Include="Source Files\mednafen\trio">
       <UniqueIdentifier>{35dd6f7d-5243-42fb-bf3b-66ae5808c1da}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\mednafen\cputest">
+      <UniqueIdentifier>{597d81a5-6308-49ec-8a03-c84348b80785}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\mednafen\Stream.cpp">
@@ -80,84 +83,6 @@
     <ClCompile Include="..\..\..\mednafen\state.cpp">
       <Filter>Source Files\mednafen</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\bios.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\biosHLE.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\dma.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\flash.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\gfx.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\gfx_scanline_colour.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\gfx_scanline_mono.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\interrupt.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\mem.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\neopop.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\rom.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\rtc.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\sound.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\T6W28_Apu.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\Z80_interface.cpp">
-      <Filter>Source Files\mednafen\ngp</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\TLCS-900h\TLCS900h_registers.cpp">
-      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\TLCS-900h\TLCS900h_disassemble.cpp">
-      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\TLCS-900h\TLCS900h_disassemble_dst.cpp">
-      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\TLCS-900h\TLCS900h_disassemble_extra.cpp">
-      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\TLCS-900h\TLCS900h_disassemble_reg.cpp">
-      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\TLCS-900h\TLCS900h_disassemble_src.cpp">
-      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\TLCS-900h\TLCS900h_interpret.cpp">
-      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\TLCS-900h\TLCS900h_interpret_dst.cpp">
-      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\TLCS-900h\TLCS900h_interpret_reg.cpp">
-      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\TLCS-900h\TLCS900h_interpret_single.cpp">
-      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\mednafen\ngp\TLCS-900h\TLCS900h_interpret_src.cpp">
-      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\mednafen\hw_cpu\z80-fuse\z80_ops.cpp">
       <Filter>Source Files\mednafen\hw_cpu\z80-fuse</Filter>
     </ClCompile>
@@ -190,6 +115,90 @@
     </ClCompile>
     <ClCompile Include="..\..\..\mednafen\sound\Stereo_Buffer.cpp">
       <Filter>Source Files\mednafen\sound</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\TLCS-900h\TLCS900h_disassemble.cpp">
+      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\TLCS-900h\TLCS900h_disassemble_dst.cpp">
+      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\TLCS-900h\TLCS900h_disassemble_extra.cpp">
+      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\TLCS-900h\TLCS900h_disassemble_reg.cpp">
+      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\TLCS-900h\TLCS900h_disassemble_src.cpp">
+      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\TLCS-900h\TLCS900h_interpret.cpp">
+      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\TLCS-900h\TLCS900h_interpret_dst.cpp">
+      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\TLCS-900h\TLCS900h_interpret_reg.cpp">
+      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\TLCS-900h\TLCS900h_interpret_single.cpp">
+      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\TLCS-900h\TLCS900h_interpret_src.cpp">
+      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\TLCS-900h\TLCS900h_registers.cpp">
+      <Filter>Source Files\mednafen\ngp\TLCS-900h</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\bios.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\biosHLE.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\dma.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\flash.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\gfx.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\gfx_scanline_colour.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\gfx_scanline_mono.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\interrupt.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\mem.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\neopop.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\rom.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\rtc.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\sound.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\T6W28_Apu.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\ngp-09333\Z80_interface.cpp">
+      <Filter>Source Files\mednafen\ngp</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\cputest\cputest.c">
+      <Filter>Source Files\mednafen\cputest</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\mednafen\player.cpp">
+      <Filter>Source Files\mednafen</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
